rtest/tests/jsr335/Semantics/MethodReferenceAnalysis/TypeMethodReference/ShouldCompile/syntax04/Test.java
// .result=COMPILE_PASS

public class Test {
	
	interface A { void method(); }
	
	public static void m() {
		
	}
	
	A a = Test::m;
}